0032697: Configuration - fix compilation errors with oneTBB 2021

Removed usage of no more existing tbb::task_scheduler_init and tbb::captured_exception.